tests/fail/namespace-def4.dit
B {
    String value;
}

B A(v) {
    value = v;
}

A {}